updated z-index issue on the main page

--- a/app/assets/stylesheets/global/typography.scss
+++ b/app/assets/stylesheets/global/typography.scss
@@ -3,8 +3,8 @@
 
 body {
 	font-size: 20px;
-	font-size: initial;
-	font-family: initial;
+	// font-size: initial;
+	// font-family: initial;
 	font-family:  'Muli', 'Open Sans', 'Lato', Arial, Georgia, sans-serif;
 }
 
