--- a/app/assets/stylesheets/main_styles/navbar.scss
+++ b/app/assets/stylesheets/main_styles/navbar.scss
@@ -1,5 +1,4 @@
 
-
 nav ul {
 	display: inline-block;
 	li {
@@ -76,4 +75,9 @@ nav {
 	.large-nav {
 		display: none;
 	}
+}
+
+nav {
+	position: relative;
+	z-index: 100;
 }
